Improve example layout and add description section

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 
     <!-- No Flex -->
     <div class="flex-example">
+      <h2 class="title">No Flex (default styles)</h2>
+
       <section class="visuals">
-        <h2>No Flex (default styles)</h2>
         <div>
           <span class="box"></span>
           <span class="box"></span>
@@ -47,12 +48,15 @@
 
         <textarea data-target="no-flex-example"> </textarea>
       </section>
+
+      <p class="description">Ain't nothing here.</p>
     </div>
 
     <!-- Flex -->
     <div class="flex-example">
+      <h2 class="title">Flex</h2>
+
       <section class="visuals">
-        <h2>Flex</h2>
         <div id="flex">
           <span class="box"></span>
           <span class="box"></span>
@@ -72,12 +76,15 @@
 
         <textarea data-target="basic-flex-example"></textarea>
       </section>
+
+      <p class="description">Ain't nothing here.</p>
     </div>
 
     <!-- Flex Row (no wrap) -->
     <div class="flex-example">
+      <h2 class="title">Flex Row (no wrap)</h2>
+
       <section class="visuals">
-        <h2>Flex Row (no wrap)</h2>
         <div id="flex-row-no-wrap">
           <span class="box"></span>
           <span class="box"></span>
@@ -110,12 +117,15 @@
 
         <textarea data-target="flex-row-no-wrap-styles"> </textarea>
       </section>
+
+      <p class="description">Ain't nothing here.</p>
     </div>
 
     <!-- Flex Row (with wrap) -->
     <div class="flex-example">
+      <h2 class="title">Flex Row (with wrap)</h2>
+
       <section class="visuals">
-        <h2>Flex Row (with wrap)</h2>
         <div id="flex-row-wrap">
           <span class="box"></span>
           <span class="box"></span>
@@ -154,13 +164,15 @@
         </style>
         <textarea data-target="flex-row-wrap-styles"> </textarea>
       </section>
+
+      <p class="description">Ain't nothing here.</p>
     </div>
 
     <!-- Flex Grow -->
     <div class="flex-example">
-      <section class="visuals">
-        <h2>Flex Grow</h2>
+      <h2 class="title">Flex Grow</h2>
 
+      <section class="visuals">
         <div id="flex-grow">
           <span class="box" id="box-1">1</span>
           <span class="box" id="box-2">2</span>
@@ -190,13 +202,15 @@
 
         <textarea data-target="flex-grow-styles"> </textarea>
       </section>
+
+      <p class="description">Ain't nothing here.</p>
     </div>
 
     <!-- Flex Shrink -->
     <div class="flex-example">
-      <section class="visuals">
-        <h2>Flex Shrink</h2>
+      <h2 class="title">Flex Shrink</h2>
 
+      <section class="visuals">
         <div id="flex-shrink">
           <span class="box" id="box-1">1</span>
           <span class="box" id="box-2">2</span>
@@ -235,13 +249,15 @@
 
         <textarea data-target="flex-shrink-styles"> </textarea>
       </section>
+
+      <p class="description">Ain't nothing here.</p>
     </div>
 
     <!-- Flex Basis -->
     <div class="flex-example">
-      <section class="visuals">
-        <h2>Flex Basis</h2>
+      <h2 class="title">Flex Basis</h2>
 
+      <section class="visuals">
         <div id="flex-basis">
           <span class="box" id="box-1">1</span>
           <span class="box" id="box-2">2</span>
@@ -283,12 +299,15 @@
 
         <textarea data-target="flex-basis-styles"> </textarea>
       </section>
+
+      <p class="description">Ain't nothing here.</p>
     </div>
 
     <!-- Flex "Flex" -->
     <div class="flex-example">
+      <h2 class="title">Flex "Flex" Property</h2>
+
       <section class="visuals">
-        <h2>Flex "Flex" Property</h2>
         <!-- Add your visuals here -->
       </section>
 
@@ -296,13 +315,15 @@
         <style id="flex-flex_property-styles"></style>
         <textarea data-target="flex-flex_property-styles"> </textarea>
       </section>
+
+      <p class="description">Ain't nothing here.</p>
     </div>
 
     <!-- Flex Align-Self -->
     <div class="flex-example">
-      <section class="visuals">
-        <h2>Flex Align-Self</h2>
+      <h2 class="title">Flex Align-Self</h2>
 
+      <section class="visuals">
         <div id="flex-align-self">
           <span class="box" id="box-1">1</span>
           <span class="box" id="box-2">2</span>
@@ -344,13 +365,15 @@
 
         <textarea data-target="flex-align-self-styles"> </textarea>
       </section>
+
+      <p class="description">Ain't nothing here.</p>
     </div>
 
     <!-- Flex Align-Items Stretch -->
     <div class="flex-example">
-      <section class="visuals">
-        <h2>Flex Align-Items Stretch</h2>
+      <h2 class="title">Flex Align-Items Stretch</h2>
 
+      <section class="visuals">
         <div id="flex-align-items-stretched">
           <span class="freeheight box">1</span>
           <span class="freeheight box">2</span>
@@ -378,13 +401,15 @@
 
         <textarea data-target="flex-align-items-stretched-styles"> </textarea>
       </section>
+
+      <p class="description">Ain't nothing here.</p>
     </div>
 
     <!-- Flex Order -->
     <div class="flex-example">
-      <section class="visuals">
-        <h2>Flex Order</h2>
+      <h2 class="title">Flex Order</h2>
 
+      <section class="visuals">
         <div id="flex-order">
           <span class="box" id="box-1">1</span>
           <span class="box" id="box-2">2</span>
@@ -424,6 +449,8 @@
 
         <textarea data-target="flex-order-styles"></textarea>
       </section>
+
+      <p class="description">Ain't nothing here.</p>
     </div>
   </body>
 
